--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Web Accessibility Setting End -->
 
     <title>카페 다모아</title>    
-    <link rel="stylesheet" href="./CSS/reset.css">
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -47,19 +47,19 @@
         </a>
         <div class="sub_inner">
             <div class="login">
-                <a href="./Subpage/login.html">로그인</a>
+                <a href="./subpage/login.html">로그인</a>
             </div>
             <div class="coffee">
-                <a href="./Subpage/cafe.html">카페</a>
+                <a href="./subpage/cafe.html">카페</a>
             </div>
             <div class="store">
-                <a href="./Subpage/near_cafe.html">주변 카페</a>
+                <a href="./subpage/near_cafe.html">주변 카페</a>
             </div>
             <div class="responsibility">
-                <a href="./Subpage/news.html">뉴스</a>
+                <a href="./subpage/news.html">뉴스</a>
             </div>
             <div class="search">
-                <a href="./Subpage/news.html">검색</a>
+                <a href="./subpage/news.html">검색</a>
             </div>
         </div>
             
@@ -72,22 +72,22 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide ">
                   <a href="https://www.starbucks.co.kr/whats_new/campaign_view.do?pro_seq=1973">
-                      <img src="./images/event/sb_event.svg" alt="">
+                      <img src="./images/event/sb_event.png" alt="">
                   </a>
           </div>
           <div class="swiper-slide">
             <a href="https://mo.twosome.co.kr/ev/eventDtl.do?annoSeqNo=112&eventDiv=progress&searchOpt=recent">
-                <img src="./images/event/ts_event.svg" alt="">
+                <img src="./images/event/ts_event.png" alt="">
             </a>
           </div>
           <div class="swiper-slide">
               <a href="https://blog.naver.com/ekddusekddus/222687660453">
-                  <img src="./images/event/mega_event.svg" alt="">
+                  <img src="./images/event/mega_event.png" alt="">
               </a>
          </div>
           <div class="swiper-slide">
               <a href="">
-                  <img src="./images/event/ediya_event.svg" alt="">
+                  <img src="./images/event/ediya_event.png" alt="">
               </a>
           </div>
         </div>
@@ -117,7 +117,7 @@
      </div>
      <!-- scroll end -->
     <div class="cafe_box">
-        <a href="./Subpage/cafe.html">
+        <a href="./subpage/cafe.html">
             <div class="sb">
                 <img src="./images/cafe_box/sb/sb_text.png" alt="" class="sb_text">
                 <img src="./images/cafe_box/sb/logo.png" alt="">
