--- a/subpage/near_cafe.html
+++ b/subpage/near_cafe.html
@@ -12,19 +12,41 @@
     >
     <!-- Web Accessibility Setting End -->
     <title>카페 다모아 | 주변 카페</title>
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="../CSS/index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="../images/icons/cada fabi.ico" />
-    <script src="https://kit.fontawesome.com/def66b134a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="./images/icons/fabicon.ico" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 </head>
 <body>
     <!-- header -->
-    <!-- First header -->
+
     <div class="abs_header">
-        <a href="../index.html">
-            <img src="../images/icons/main_banner.png" alt="Cafe Damoa_Logo">
+        <a href="./index.html">
+            <img src="./images/icons/main_banner.png" alt="">
         </a>
-    </div>
+        <div class="sub_inner">
+            <div class="login">
+                <a href="./Subpage/login.html">로그인</a>
+            </div>
+            <div class="coffee">
+                <a href="./Subpage/cafe.html">카페</a>
+            </div>
+            <div class="store">
+                <a href="./Subpage/near_cafe.html">주변 카페</a>
+            </div>
+            <div class="responsibility">
+                <a href="./Subpage/news.html">뉴스</a>
+            </div>
+            <div class="search">
+                <a href="./Subpage/news.html">검색</a>
+            </div>
+        </div>
     <div id="daumRoughmapContainer1569676989615" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
 <script charset="UTF-8">
