--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- scroll end -->
     <title>카페 다모아</title>
-    <link rel="stylesheet" href="./CSS/reset.css">
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/index.css">
     <script src="https://kit.fontawesome.com/def66b134a.js" crossorigin="anonymous"></script>
 
 </head>
