--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide ">
                   <a href="https://www.starbucks.co.kr/whats_new/campaign_view.do?pro_seq=1973">
-                      <img src="./images/event/sb_event.png" alt="">
+                      <img src="./images/event/sb_event.svg" alt="">
                   </a>
           </div>
           <div class="swiper-slide">
             <a href="https://mo.twosome.co.kr/ev/eventDtl.do?annoSeqNo=112&eventDiv=progress&searchOpt=recent">
-                <img src="./images/event/ts_event.png" alt="">
+                <img src="./images/event/ts_event.svg" alt="">
             </a>
           </div>
           <div class="swiper-slide">
               <a href="https://blog.naver.com/ekddusekddus/222687660453">
-                  <img src="./images/event/mega_event.png" alt="">
+                  <img src="./images/event/mega_event.svg" alt="">
               </a>
          </div>
           <div class="swiper-slide">
               <a href="">
-                  <img src="./images/event/ediya_event.png" alt="">
+                  <img src="./images/event/ediya_event.svg" alt="">
               </a>
           </div>
         </div>
